--- a/Media/Playlist_Page.css
+++ b/Media/Playlist_Page.css
@@ -244,7 +244,7 @@ aside ul li a:hover{
 }
 
 #Playlists .Top-Hits-Hindi{
-    background-image: url(Playlist-Img.avif);
+    background-image: url(Playlist-Img2.webp);
     background-size: cover;
     background-position: center;
     transition: 0.4s ease-in-out all;
