--- a/Media/Single_Playlist.css
+++ b/Media/Single_Playlist.css
@@ -212,7 +212,7 @@ aside ul li a:hover{
     font-family: 'Ubuntu', sans-serif;
 }
 .playlist-img{
-    background-image: url(Playlist-Img.avif);
+    background-image: url(Playlist-Img2.webp);
     background-size: cover;
     background-position: center;
 }
